--- a/vignette/session_1.Rmd
+++ b/vignette/session_1.Rmd
@@ -18,28 +18,28 @@ State-transition cohort models are among the most frequently utilized decision-m
 Microsimulation models describe key biological processes or clinical pathways. These processes or pathways can be conceptualised in terms of a series of distinct health states (events) that are mutually exclusive and collectively exhaustive. Each simulated individual can only be in one health state at any given time. Using individual-specific transition probabilities, people are simulated through the model one at a time, while keeping track of their individual trajectories. In health economics, every health state, and potentially every transition between health states, is associated with a specific set of values (sometimes called "payoffs" or "rewards"). For instance, in a cost-utility analysis, the cost and the quality-adjusted life years (QALYs) would represent the rewards associated with remaining in each health state for one cycle. State and transition outcome values can be influenced by a person's characteristics as well as their past transitions and events.
 
 ```{r algorithm, echo=TRUE, eval=FALSE}
-# create matrices to capture the simulation of 1,000 individuals over 30 cycles
-m_States <- matrix(nrow = 1000, ncol = 30 + 1) # to store state name
-m_Costs  <- matrix(nrow = 1000, ncol = 30 + 1) # to store state-related calc_costs
-m_Effs   <- matrix(nrow = 1000, ncol = 30 + 1) # to store state-related health outcomes (QALYs) 
+# create matrices to capture the simulation of num_i individuals over num_cycles cycles
+m_States <- matrix(nrow = num_i, ncol = num_cycles + 1) # to store state name
+m_Costs  <- matrix(nrow = num_i, ncol = num_cycles + 1) # to store state-related calc_costs
+m_Effs   <- matrix(nrow = num_i, ncol = num_cycles + 1) # to store state-related health outcomes (QALYs) 
 
-for (i in 1:1000) {                            # for each 'i' of the 1,000 simulated individual:
+for (i in 1:num_i) {                              # for each 'i' of the num_i simulated individual:
   
   # Step 1:
-  m_States[i, 1] <- v_starting_states[i]       # indicate the initial health state
-  m_Costs[i, 1]  <- calc_costs(m_States[i, 1]) # calculate the costs incurred in their starting health state
-  m_Effs[i, 1]   <- calc_effs(m_States[i, 1])  # calculate the QALYs accrued in their starting health state
+  m_States[i, 1] <- v_starting_states[i]          # indicate the initial health state
+  m_Costs[i, 1]  <- calc_costs(m_States[i, 1])    # calculate the costs incurred in the starting health state
+  m_Effs[i, 1]   <- calc_effs(m_States[i, 1])     # calculate the QALYs accrued in the starting health state
   
-  for (t in 1:30) {                               # for each 't' of the 30 cycles:
+  for (t in 1:num_cycles) {                       # for each 't' of the num_cycles cycles:
     # Step 2:
-    v_trans_probs <- update_porbs(m_States[i, t]) # update the transition probabilities at cycle 't'
+    v_trans_probs <- update_porbs(m_States[i, t]) # update the transition probabilities at 't'
     
     # Step 3:
-    m_States[i, t + 1] <- sample(state_names, prob = v_trans_probs, size = 1)  # sample the health state at 't + 1' 
+    m_States[i, t + 1] <- sample(state_names, prob = v_trans_probs, size = 1)  # sample the state at 't + 1' 
     
     # Step 4:
-    m_Costs[i, t + 1]  <- calc_costs(m_States[i, t + 1]) # calculate the costs incurred in their 't + 1' health state
-    m_Effs[i, t + 1]   <- calc_effs( m_States[i, t + 1]) # calculate the QALYs accrued in their 't + 1' health state
+    m_Costs[i, t + 1]  <- calc_costs(m_States[i, t + 1]) # calculate the costs incurred at 't + 1'
+    m_Effs[i, t + 1]   <- calc_effs( m_States[i, t + 1]) # calculate the QALYs accrued at 't + 1'
   } # close the loop for the cycles 't' 
   
 } # close the loop for the individuals 'i'
@@ -47,8 +47,8 @@ for (i in 1:1000) {                            # for each 'i' of the 1,000 simul
 # Step 5:
 v_total_costs <- rowSums(m_Costs)           # calculate total cost per individual
 v_total_qalys <- rowSums(m_Effs)            # calculate total QALYs per individual
-total_costs   <- mean(v_total_costs)        # calculate average discounted cost 
-total_qalys   <- mean(v_total_qalys)        # calculate average discounted QALYs
+mean_costs    <- mean(v_total_costs)        # calculate average discounted cost 
+mean_qalys    <- mean(v_total_qalys)        # calculate average discounted QALYs
 ```
 
 ## R Markdown
